# HONPAS

./: AUTHORS  INSTALL  NOTICE.txt  README  README.honpas  README.md  README_TRANSIESTA  ReleaseNotes.md  SIESTA_LICENCE  arch.make  install.sh  version.F90  version.info
ARCH-HONPAS/: honpas-gnu-openmpi.make  honpas-intel-mpi.make  honpas-intelmpi.make
Docs/: CHANGES  Contributors.txt  Makefile  README  REPORTING_BUGS  YAML.README  compatibility.tex  install_flook.bash  install_netcdf4.bash  release.notes_0.9  release.notes_1.1  release.notes_1.3  release.notes_2.0  release.notes_3.0-rc1  release.notes_3.0-rc2  siesta.bib  siesta.ind  siesta.tex  tbtrans.tex
Docs/LitCode/: README  pexsi-dos.html  pexsi-ldos.html  pexsi-lit.html  pexsi-solver.html  redist-spmatrix.html
Docs/branch-changes/: 4.0.CHANGES  BSC.CHANGES  CHANGES.charconf  (+30 more)
Examples/: README
HONPAS_Examples/: honpas.pbs
Pseudo/: README.ATOM
Src/: 1  2.F90  Fstack.T90  Makefile  Pair.T90  \  aclocal.m4  alloc.F90  amn.F90  arch.make  arch.make.in  arw.f  atm_transfer.f  atm_types.f  atmfuncs.f  atmparams.f  atom.F  atom.f  atom_graph.F90  atom_options.F90  atomlist.f  atomlwf.F  automatic_cell.f  bands.F  basic_func.inc  basic_type.inc  basis_enthalpy.f90  basis_io.F  basis_specs.f  basis_types.f  bessph.f  bloch_unfold.F90  bonds.f  born_charge.F  broadcast_basis.F  broadcast_projections.F  broyden_optim.F  bsc_cellxc.F  bsd.f  cart2frac.f  (+560 more)
Src/Confs/: README  arina-mpi.conf  arina-serial.conf  g95-cdf.conf  intel9mkl8-safe.conf  macosx-nag-cdf.conf  matterhorn-gm.conf  matterhorn-serial.conf  pegasus-mpi.conf
Src/FoX/: configure
Src/FoX/common/: m_common_attrs.F90  makefile
Src/FoX/fsys/: fox_m_fsys_format.F90
Src/FoX/utils/: fox_m_utils_uri.F90
Src/FoX/wcml/: makefile
Src/FoX/wxml/: makefile
Src/Include/: constr.f
Src/Libs/: Makefile  README  blas.F  blas.f  blas_add.files  create.sh  dc_lapack.f  essl_lapack.f  lapack.F  lapack.f  lapack_add.files  lapack_add.routines  lapack_remove.files  lapack_remove.routines  linalg2file.py  machine.F  makefile  zgeev_lapack.f  zgesv_lapack.f
Src/MPI/: LICENSE  Makefile  generate.sh  int_explorer.f90  kind_explorer.f90  mpi.F  mpi__include.f90  mpi__type_s.f90  mpi__type_sv.f90  mpi__type_v.f90  mpi__type_vs.f90  mpi_interfaces.F  mpi_siesta.F90  mpif2sane.f90  timer_mpi.F90
Src/Orphans/: check_scf_convergence.F  compute_EKS_Harris.F90  new_dm.F
Src/SiestaXC/: 00_README  BSD_LICENSE  am05.f90  array.F90  atomxc.F90  cellxc.F90  debugxc.f90  fft3d.F90  fftr.F90  ggaxc.F  hsexc.f  ldaxc.f  lib-00-README  lib-arch.make  lib-makefile  local_sys.F  makefile  mesh1d.f90  mesh3d.F90  mpi-makefile  pbe0xc.f  siestaXC.files  siestaxc.F90  test-makefile  vdwxc.F90  vv_vdwxc.F90  xc_xwpbe.F90  xcmod.f90
Src/SiestaXC/Testers/: makefile  test1.f90  test2.F90  test2.m  test3.F90  test4.F90  test5.f90  test5.m  test6.f90  test6.m
Src/SiestaXC/Testers/Reference/: test1.out  test2.out  test3.out  test4.out
Src/Sys/: DOCUMENTED-TEMPLATE.make  README  arina-mlib.make  compaq-mpi.make  cscs-cray-mpi.make  cscs-cray.make  cscs-ibm-blanc.make  darwin.make  finisterrae.make  g95-nolibs.make  gfortran-netcdf.make  gfortran.make  hpcx.make  ibm-regatta-p4.make  ibmp3-mpi.make  ibmp3.make  icmab-snake-mpi.make  ifort-netcdf.make  intel-checks.make  intel-mkl.make  intel-nolibs.make  intel9-cmkl8-mpi-netcdf.make  intel9-cmkl8-mpi.make  intel9-mkl8.make  intel9-opteron-mpi.make  itanium2-mpi.make  itanium2.make  macosx-gfortran64-atlas.make  macosx-nag-mpi.make  macosx-nag.make  macosx-xlf.make  marenostrum-mpi-32.make  marenostrum-mpi-64.make  marenostrum-mpi-essl-netcdf-64.make  marenostrum-mpi-netcdf-32.make  marenostrum-mpi-netcdf-64.make  matgas-lam.make  nano-intel-mpi-cdf.make  nano-intel-mpi.make  nano-intel-serial.make  (+8 more)
Src/fdf/: Otherfile  README  XY.fdf  arch.make  coords.fdf  fdf.F90  fdf.Standard  fdf.f  fdf_units.py  hostfile  io_fdf.F90  iso_fortran_env.F90  makefile  parse.F90  prec.F90  sample.F90  sample.fdf  submit.sh  utils.F90
Src/fdict/sources/src/: fdict.inc  variable.f90
Src/hfx/: nao2gto_contract.F90  nao2gto_data.F90  nao2gto_hfx.F90  nao2gto_index.F90  nao2gto_io.F90  nao2gto_libint.F90  nao2gto_parallel.F90  nao2gto_pbc.F90  nao2gto_powell.F90  nao2gto_prescreen.F90  nao2gto_primitive.F90  nao2gto_transform.F90  nao2gto_types.F90  nao2gto_utils.F90
Src/m4/: TW_FC_ID_FLAGS.m4  fortran.m4
Src/ncdf/: .gitignore  .gitmodules  .settings.bash  Makefile  Makefile.project  README.md  dist.sh  log.org  setup.sh
Src/ncdf/arch-makes/: gfortran.make  intel.make
Src/ncdf/sources/src/: netcdf_ncdf.f90
Src/ncdf/sources_4/src/: netcdf_ncdf.f90  netcdf_ncdf.inc
Src/ncdf/sources_4_parallel/src/: netcdf_ncdf.f90
Src/ncdf/sources_parallel/src/: netcdf_ncdf.f90  netcdf_ncdf.inc
Src/ncdf/src/: Makefile.inc  filter.sed  ncdf.sh  netcdf_ncdf_att_inc.inc  netcdf_ncdf_pp.F90  netcdf_ncdf_var_inc.inc  settings.inc
Src/ncdf/test/: Makefile.inc  tst_ncdf_3.F90  tst_ncdf_4.F90  tst_ncdf_att.F90  tst_ncdf_crt.F90  tst_ncdf_utils.F90
Src/wxml/: LICENSE  flib_wcml.f90  flib_wstml.f90  flib_wxml.f90  m_wcml_coma.f90  m_wxml_array_str.f90  m_wxml_buffer.f90  m_wxml_core.f90  m_wxml_dictionary.f90  m_wxml_elstack.f90  m_wxml_error.f90  m_wxml_overloads.f90  m_wxml_text.F90  makefile
Src/xmlparser/: LICENSE  corresponding_node.f90  f2kcli.F90  f2kcli_manual.txt  flib_dom.f90  flib_sax.f90  list_nodes.f90  m_compare_tol.f90  m_dom_attribute.f90  m_dom_element.f90  m_dom_nodelist.f90  m_dom_parse.f90  m_dom_types.f90  m_getopts.f90  m_reader.f90  m_strings.f90  makefile  string_utilities.f90  xml-pseudopotential.f
Tests/: Makefile  README  bsc-compare.sh  cmp_digest.sh  cyclediffs.sh  out_digest.awk  out_digest_template.awk  script.mk  script_ts.mk  siesta-testsuite.yml  std-compare.sh  test-eggbox-e-vs-mesh.mk  test-eggbox.mk  test-list.mk  test.mk
Tests_AMD_EPYC_7763_64-Core_Processor/: get.sh  job-6765.err  job-6765.out  submit.sh
Tutorials/: README
Util/: COPYING  COPYRIGHT  README  build_all.sh  clean_all.sh  dep_all.sh  vpsa2bin.f  vpsb2asc.f
(+2471 files in other folders)
